# example-python-package

./: pyproject.toml
py_cowsay/: cli.py  lib.py
