[tool.poetry]
name = "example-python-package"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{ include = "example_python_package" }]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
rich = "^13.4.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
